[gd_scene load_steps=9 format=3 uid="uid://dnlrcudlvrk62"]

[ext_resource type="Texture2D" uid="uid://b7khh0apynfkf" path="res://assets/sprites/mmbg1.png" id="1_wb7ut"]
[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_xueif"]
[ext_resource type="Theme" uid="uid://di6yrf76kilwx" path="res://assets/font_theme.tres" id="3_wvafh"]
[ext_resource type="Texture2D" uid="uid://cyvy7nvdecp7t" path="res://assets/sprites/dark.png" id="4_sy10d"]
[ext_resource type="AudioStream" uid="uid://ctagm16kusy11" path="res://assets/bgm/menubg1.mp3" id="5_lc1yp"]

[sub_resource type="Animation" id="Animation_fwpe8"]
resource_name = "IDLE"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dark:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3e27e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dark:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0c62w"]
_data = {
"IDLE": SubResource("Animation_fwpe8"),
"RESET": SubResource("Animation_3e27e")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xueif")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(159.563, 132.563)
scale = Vector2(0.642334, 0.642334)
texture = ExtResource("1_wb7ut")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -88.0
offset_right = 88.0
offset_bottom = 62.0
grow_horizontal = 2
theme = ExtResource("3_wvafh")
theme_override_colors/default_color = Color(0.933333, 0.686275, 0.470588, 1)
bbcode_enabled = true
text = "[shake rate=5 level=10][center]
CAT CROP COLLECTOR"
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "IDLE"
libraries = {
"": SubResource("AnimationLibrary_0c62w")
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 97.0
offset_top = 64.0
offset_right = 222.0
offset_bottom = 200.0
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "ABOUT"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUIT"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -48.0
offset_right = 154.0
offset_bottom = 9.99998
grow_vertical = 0
scale = Vector2(0.800001, 0.799999)
bbcode_enabled = true
text = "
[center][tornado radius=5 freq=1][rainbow freq=0.1]eliasvsimon.com"
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 224.0
offset_top = 203.0
offset_right = 375.0
offset_bottom = 253.0
scale = Vector2(0.7, 0.7)
text = "M = mute
F11 = fullscreen"

[node name="Dark" type="Sprite2D" parent="."]
position = Vector2(175, 101)
scale = Vector2(0.283, 0.223)
texture = ExtResource("4_sy10d")

[node name="AcceptDialog" type="AcceptDialog" parent="."]
title = "About"
position = Vector2i(65, 46)
size = Vector2i(212, 165)
exclusive = false
transparent = true
popup_window = true
min_size = Vector2i(212, 165)
max_size = Vector2i(212, 165)

[node name="Label" type="RichTextLabel" parent="AcceptDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 204.0
offset_bottom = 116.0
text = "Godot Game Engine:
Copyright (c) 2014-present Godot Engine contributors (see AUTHORS.md).
Copyright (c) 2007-2014 Juan Linietsky, Ariel Manzur.

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

Wheat PNG: 
Creative Commons 4.0 BY-NC by \"Royal\"
https://www.pngall.com/wheat-field-png"
scroll_following = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_lc1yp")
volume_db = -6.783
autoplay = true

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
